# aws-machine-learning

aws-sagemaker-pre-built-algorithm/: requirements.txt  run_train.py  train.py
langchain-tool-example/: pyproject.toml
langchain-tool-example/langchain_tool_example/: main.py
litellm-gateway/: Dockerfile  litellm_config.yml  pyproject.toml  runme.sh
loan-approval-predictor-service/: run_train.py  train.py
loan-approval-predictor-service/terraform/: init.tf  main.tf  pipeline_definition.json  qa.tfvars  variables.tf
