[tool.poetry]
name = "langchain-tool-example"
version = "0.1.0"
description = ""
authors = ["sabyasachi <njoysubho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "0.3.21"
langchain-aws = "0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
