[tool.poetry]
name = "litellm-gateway"
version = "0.1.0"
description = ""
authors = ["sabyasachi <njoysubho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
boto3 = "^1.28.57"
litellm = "1.59.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
